syntax = "proto3";

import "google/protobuf/timestamp.proto";

package meta;

message WireObject {
  VolatileMeta Volatile = 1;
  PersistentMeta Persistent = 2;
}

message VolatileMeta {
  string Path = 1;
  string Show = 2;
  FileInfo FileInfo = 3;
  string Parent = 4;
}

message FileInfo {
  string Name = 1;
  int64 Size = 2;
  uint32 Mode = 3;
  google.protobuf.Timestamp ModTime = 4;
  bool IsDir = 5;
}

message PersistentMeta {
  bool ShowRoot = 1;
  Contract Contract = 2;
  repeated string Instances = 3;
  map<string, string> UserData = 4;
  ImgInfo ImgInfo = 5;
  Seq Seq = 6;
}

message Contract {
  string Pattern = 1;
}

message ImgInfo {
  int32 Width = 1;
  int32 Height = 2;
}

message Seq {
  string BaseName = 1;
  int32 First = 2;
  int32 Last = 3;
}

message UserArray {
  repeated UserValue A = 1;
}

message UserObject {
    map<string, UserValue> O = 1;
}

message UserValue {
  oneof Value {
    bool B = 1;
    double N = 2;
    string S = 3;
    UserArray A = 4;
    UserObject O = 5;
  }
}
