syntax = "proto3";
package metadata;

message UserSection {
  map<string, string> user_data = 1;
}
